force-app/main/default/objects/CTA__c/fields/Reasons_for_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Unqualified__c</fullName>
    <label>Reasons for Unqualified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Couldn&apos;t connect</fullName>
            </value>
            <value>
                <fullName>Customer needs specific product – not in our range</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t interact with any CTA</fullName>
            </value>
            <value>
                <fullName>Existing customer with existing application</fullName>
            </value>
            <value>
                <fullName>Irrelevant industry</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Outside India lead</fullName>
            </value>
            <value>
                <fullName>Personal use</fullName>
            </value>
            <value>
                <fullName>Trader/reseller catering to existing LOCTITE customer</fullName>
            </value>
            <value>
                <fullName>Trader/reseller - product/price expectation didn&apos;t match</fullName>
            </value>
            <value>
                <fullName>Bought from somewhere else</fullName>
            </value>
            <value>
                <fullName>Sample not received</fullName>
            </value>
            <value>
                <fullName>Duplicate enquiry</fullName>
            </value>
            <value>
                <fullName>Not much potential</fullName>
            </value>
            <value>
                <fullName>Customer has no current requirement</fullName>
            </value>
            <value>
                <fullName>Price issue</fullName>
            </value>
            <value>
                <fullName>Trader/reseller - not interested</fullName>
            </value>
            <value>
                <fullName>Trader/reseller - not in industrial space</fullName>
            </value>
            <value>
                <fullName>Language barrier</fullName>
            </value>
            <value>
                <fullName>Placed an eCom order for customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>