force-app/main/default/objects/CTA__c/fields/RecurringBusiness__c.field-meta.xml
<CustomField>
    <fullName>RecurringBusiness__c</fullName>
    <label>Type of business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Recurring Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>