force-app/main/default/objects/CTA__c/fields/Refer_A_Friend_Product__c.field-meta.xml
<CustomField>
    <fullName>Refer_A_Friend_Product__c</fullName>
    <label>Refer A Friend Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>