force-app/main/default/objects/CTA__c/fields/Refer_A_Friend_Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Refer_A_Friend_Product_Details__c</fullName>
    <label>Refer A Friend Product Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>