force-app/main/default/objects/CTA__c/fields/Refer_A_Friend_Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Refer_A_Friend_Product_Link__c</fullName>
    <label>Refer A Friend Product Link</label>
    <type>Url</type>
</CustomField>