force-app/main/default/objects/CTA__c/fields/Refer_a_friend_Subject__c.field-meta.xml
<CustomField>
    <fullName>Refer_a_friend_Subject__c</fullName>
    <label>Refer a friend-Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>