force-app/main/default/objects/CTA__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <description>Refer A Friend email id</description>
    <label>Referred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>