force-app/main/default/objects/CTA__c/fields/Request_Callback_Product__c.field-meta.xml
<CustomField>
    <fullName>Request_Callback_Product__c</fullName>
    <label>Request Callback Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>