force-app/main/default/objects/CTA__c/fields/Request_Callback_Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Callback_Product_Details__c</fullName>
    <label>Request Callback Product Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>