force-app/main/default/objects/CTA__c/fields/Request_Callback_Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Request_Callback_Product_Link__c</fullName>
    <label>Request Callback Product Link</label>
    <type>Url</type>
</CustomField>