force-app/main/default/objects/CTA__c/fields/requestcallback_sku__c.field-meta.xml
<CustomField>
    <fullName>requestcallback_sku__c</fullName>
    <label>requestcallback_sku</label>
    <length>100</length>
    <type>Text</type>
</CustomField>