force-app/main/default/objects/CTA__c/fields/Role_in_the_organisation__c.field-meta.xml
<CustomField>
    <fullName>Role_in_the_organisation__c</fullName>
    <formula>IF( Lead__r.Role_in_organisation__c  &lt;&gt; Null, Lead__r.Role_in_organisation__c,  Customer_Contact__r.Role_in_organisation__c )</formula>
    <label>Role in the organisation</label>
    <type>Text</type>
</CustomField>