force-app/main/default/objects/CTA__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <label>Sales Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abhijeet Shrivastava</fullName>
            </value>
            <value>
                <fullName>Abhinav Mahajan</fullName>
            </value>
            <value>
                <fullName>Abhisek Basu</fullName>
            </value>
            <value>
                <fullName>Abhishek joshi</fullName>
            </value>
            <value>
                <fullName>Alok Shende</fullName>
            </value>
            <value>
                <fullName>Amit Grewal</fullName>
            </value>
            <value>
                <fullName>Amit Gupta</fullName>
            </value>
            <value>
                <fullName>Amit Singh</fullName>
            </value>
            <value>
                <fullName>Anand Boopathy – IA</fullName>
            </value>
            <value>
                <fullName>Arul P</fullName>
            </value>
            <value>
                <fullName>AshishKumar Sinha</fullName>
            </value>
            <value>
                <fullName>Ashutosh Mishra</fullName>
            </value>
            <value>
                <fullName>Bhanu Yadav</fullName>
            </value>
            <value>
                <fullName>Chandraprakash</fullName>
            </value>
            <value>
                <fullName>Deric Paul</fullName>
            </value>
            <value>
                <fullName>Dharmik Upadhyay</fullName>
            </value>
            <value>
                <fullName>Dhinesh Chockalingam</fullName>
            </value>
            <value>
                <fullName>Dinesh Kumar P</fullName>
            </value>
            <value>
                <fullName>Dinesh Kumar - RSM</fullName>
            </value>
            <value>
                <fullName>Dinesh Rana – IA</fullName>
            </value>
            <value>
                <fullName>Gaurav Vaid</fullName>
            </value>
            <value>
                <fullName>Harikumar</fullName>
            </value>
            <value>
                <fullName>Hemant Majali</fullName>
            </value>
            <value>
                <fullName>Irfan Malik</fullName>
            </value>
            <value>
                <fullName>Jagannathan</fullName>
            </value>
            <value>
                <fullName>James Oommen</fullName>
            </value>
            <value>
                <fullName>Jatin Suthar</fullName>
            </value>
            <value>
                <fullName>Kanishk Kaul</fullName>
            </value>
            <value>
                <fullName>Karthikeyan Balasubramaniam</fullName>
            </value>
            <value>
                <fullName>Kartik Joshi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>