force-app/main/default/objects/CTA__c/fields/Sample_Received_On_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Received_On_Project_Start_Date__c</fullName>
    <label>Sample Received On / Project Start Date</label>
    <type>Date</type>
</CustomField>