force-app/main/default/objects/CTA__c/fields/Sample_Requested_Contact_Us__c.field-meta.xml
<CustomField>
    <fullName>Sample_Requested_Contact_Us__c</fullName>
    <label>Sample Requested- Contact Us</label>
    <length>255</length>
    <type>Text</type>
</CustomField>