force-app/main/default/objects/CTA__c/fields/Sample_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Sample_Sent_On__c</fullName>
    <label>Sample Sent On</label>
    <type>Date</type>
</CustomField>