force-app/main/default/objects/CTA__c/fields/SampleRequested_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SampleRequested_Timestamp__c</fullName>
    <label>SampleRequested-Timestamp</label>
    <type>DateTime</type>
</CustomField>