force-app/main/default/objects/CTA__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>IF(  TEXT(Customer_Contact__r.SBU__c)   &lt;&gt; Null, TEXT(Customer_Contact__r.SBU__c),Lead__r.SBU__c )</formula>
    <label>SBU</label>
    <type>Text</type>
</CustomField>