force-app/main/default/objects/CTA__c/fields/SENDER_GLUSR_USR_ID__c.field-meta.xml
<CustomField>
    <fullName>SENDER_GLUSR_USR_ID__c</fullName>
    <description>Indiamart Related</description>
    <label>SENDER_GLUSR_USR_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>