force-app/main/default/objects/CTA__c/fields/Servicing_these_industrial_hubs__c.field-meta.xml
<CustomField>
    <fullName>Servicing_these_industrial_hubs__c</fullName>
    <description>Research inputs – traders</description>
    <inlineHelpText>Research inputs – traders</inlineHelpText>
    <label>Servicing these industrial hubs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>