force-app/main/default/objects/CTA__c/fields/Strong_presence_in_these_industries__c.field-meta.xml
<CustomField>
    <fullName>Strong_presence_in_these_industries__c</fullName>
    <description>Research inputs – traders</description>
    <inlineHelpText>Research inputs – traders</inlineHelpText>
    <label>Strong presence in these industries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>