force-app/main/default/objects/CTA__c/fields/Supply_Date__c.field-meta.xml
<CustomField>
    <fullName>Supply_Date__c</fullName>
    <description>Indiamart Related</description>
    <label>Supply Date</label>
    <type>Date</type>
</CustomField>