force-app/main/default/objects/CTA__c/fields/Team_strength__c.field-meta.xml
<CustomField>
    <fullName>Team_strength__c</fullName>
    <description>Research inputs – traders</description>
    <inlineHelpText>Research inputs – traders</inlineHelpText>
    <label>Team strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>