force-app/main/default/objects/CTA__c/fields/Technology_Name__c.field-meta.xml
<CustomField>
    <fullName>Technology_Name__c</fullName>
    <description>Indiamart Related</description>
    <label>Technology Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>