force-app/main/default/objects/CTA__c/fields/Tell_Us_About_Your_Application_in_one_li__c.field-meta.xml
<CustomField>
    <fullName>Tell_Us_About_Your_Application_in_one_li__c</fullName>
    <formula>IF(  ISBLANK(Customer_Contact__r.Tell_us_about_your_application_in_one_li__c)==False , Customer_Contact__r.Tell_us_about_your_application_in_one_li__c,Lead__r.Tell_us_about_your_application_in_one_li__c  )</formula>
    <label>Tell Us About Your Application</label>
    <type>Text</type>
</CustomField>