force-app/main/default/objects/CTA__c/fields/Test_P__c.field-meta.xml
<CustomField>
    <fullName>Test_P__c</fullName>
    <formula>IF( Lead__r.Test__c ==True, True, IF( Customer_Contact__r.Test__c == True, True, False)  )</formula>
    <label>Test P</label>
    <type>Checkbox</type>
</CustomField>