force-app/main/default/objects/CTA__c/fields/Time_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Delivery__c</fullName>
    <label>Time of Delivery</label>
    <length>20</length>
    <type>Text</type>
</CustomField>