force-app/main/default/objects/CTA__c/fields/Time_Of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Enquiry__c</fullName>
    <description>Indiamart Related</description>
    <label>Time Of Enquiry</label>
    <length>30</length>
    <type>Text</type>
</CustomField>