force-app/main/default/objects/CTA__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>