force-app/main/default/objects/CTA__c/fields/To_be_discussed_with_TSE__c.field-meta.xml
<CustomField>
    <fullName>To_be_discussed_with_TSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be discussed with Sr.IST</label>
    <type>Checkbox</type>
</CustomField>