force-app/main/default/objects/CTA__c/fields/TOTAL_COUNT__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_COUNT__c</fullName>
    <description>Indiamart Related</description>
    <label>TOTAL_COUNT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>