force-app/main/default/objects/CTA__c/fields/Tracking_Package_Url__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Package_Url__c</fullName>
    <formula>IF( Courier_Company__c == &apos;India Post&apos;, &apos;https://www.indiapost.gov.in/_layouts/15/dop.portal.tracking/trackconsignment.aspx&apos;, &apos;http://www.bluedart.in/?&apos;+Waybill_No__c)</formula>
    <label>Tracking Package Url</label>
    <type>Text</type>
</CustomField>