force-app/main/default/objects/CTA__c/fields/Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Tracking_URL__c</fullName>
    <label>Tracking URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>