force-app/main/default/objects/CTA__c/fields/Type_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Enquiry__c</fullName>
    <label>Type of Enquiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>