force-app/main/default/objects/CTA__c/fields/Type_of_qualification__c.field-meta.xml
<CustomField>
    <fullName>Type_of_qualification__c</fullName>
    <label>Type of qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>