force-app/main/default/objects/CTA__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Indiamart Related</description>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>