force-app/main/default/objects/CTA__c/fields/Waybill_No__c.field-meta.xml
<CustomField>
    <fullName>Waybill_No__c</fullName>
    <label>Waybill No.</label>
    <length>14</length>
    <type>Text</type>
</CustomField>