force-app/main/default/objects/CTA__c/fields/Webinar_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Timestamp__c</fullName>
    <label>Webinar Timestamp</label>
    <type>DateTime</type>
</CustomField>