force-app/main/default/objects/CTA__c/fields/Webinar_Video_total_duration__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Video_total_duration__c</fullName>
    <label>Webinar Video total duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>