force-app/main/default/objects/CTA__c/fields/What_are_the_applications_discussed__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_applications_discussed__c</fullName>
    <description>Research inputs – End customer</description>
    <inlineHelpText>Research inputs – End customer</inlineHelpText>
    <label>What are the applications discussed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>