force-app/main/default/objects/CTA__c/fields/what_are_their_production_volumes__c.field-meta.xml
<CustomField>
    <fullName>what_are_their_production_volumes__c</fullName>
    <label>what are their production volumes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>