force-app/main/default/objects/CTA__c/fields/What_does_the_customer_do__c.field-meta.xml
<CustomField>
    <fullName>What_does_the_customer_do__c</fullName>
    <label>What does the customer do</label>
    <length>255</length>
    <type>Text</type>
</CustomField>