force-app/main/default/objects/CTA__c/fields/What_is_the_purpose_use__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_purpose_use__c</fullName>
    <formula>IF(   ISBLANK(TEXT(Customer_Contact__r.What_is_the_purpose_use__c))==False ,TEXT(Customer_Contact__r.What_is_the_purpose_use__c),TEXT(Lead__r.What_is_the_purpose_use__c))</formula>
    <label>What is the purpose/use</label>
    <type>Text</type>
</CustomField>