force-app/main/default/objects/CTA__c/fields/what_is_your_current_method__c.field-meta.xml
<CustomField>
    <fullName>what_is_your_current_method__c</fullName>
    <formula>IF( Lead__r.CC_Current_Method__c  &lt;&gt; Null, Lead__r.CC_Current_Method__c, Customer_Contact__r.CC_Current_Method__c )</formula>
    <label>what is your current method</label>
    <type>Text</type>
</CustomField>