force-app/main/default/objects/CTA__c/fields/What_the_company_does__c.field-meta.xml
<CustomField>
    <fullName>What_the_company_does__c</fullName>
    <formula>IF( ISBLANK( Lead__r.What_the_company_does__c )==False , Lead__r.What_the_company_does__c , Customer_Contact__r.What_the_company_does__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What the company does</label>
    <type>Text</type>
</CustomField>