force-app/main/default/objects/CTA__c/fields/What_was_the_initial_enquiry__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_initial_enquiry__c</fullName>
    <description>Research inputs – End customer</description>
    <inlineHelpText>Research inputs – End customer</inlineHelpText>
    <label>What was the initial enquiry?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>