force-app/main/default/objects/CTA__c/fields/What_were_they_using_before__c.field-meta.xml
<CustomField>
    <fullName>What_were_they_using_before__c</fullName>
    <description>What were they using before (LOCTITE/other adhesive/another method)</description>
    <inlineHelpText>What were they using before (LOCTITE/other adhesive/another method)</inlineHelpText>
    <label>What were they using before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>