force-app/main/default/objects/CTA__c/fields/When_did_we_fully_qualify_the_customer__c.field-meta.xml
<CustomField>
    <fullName>When_did_we_fully_qualify_the_customer__c</fullName>
    <description>Research inputs – End customer</description>
    <inlineHelpText>Research inputs – End customer</inlineHelpText>
    <label>When did we fully qualify the customer?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>