force-app/main/default/objects/CTA__c/fields/Where_are_you_located_city__c.field-meta.xml
<CustomField>
    <fullName>Where_are_you_located_city__c</fullName>
    <description>Research inputs – traders</description>
    <inlineHelpText>Research inputs – traders</inlineHelpText>
    <label>Where are you located (city)?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>