force-app/main/default/objects/CTA__c/fields/Which_Product_Sent__c.field-meta.xml
<CustomField>
    <fullName>Which_Product_Sent__c</fullName>
    <label>Which Product Sent?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LOCTITE Threadlocker 243</fullName>
            </value>
            <value>
                <fullName>LOCTITE Thread Sealants 542</fullName>
            </value>
            <value>
                <fullName>LOCTITE Retaining Compound 638</fullName>
            </value>
            <value>
                <fullName>Loctite 55</fullName>
            </value>
            <value>
                <fullName>Loctite 542</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>