force-app/main/default/objects/CTA__c/fields/Why_Henkel__c.field-meta.xml
<CustomField>
    <fullName>Why_Henkel__c</fullName>
    <description>Research inputs – traders</description>
    <inlineHelpText>Research inputs – traders</inlineHelpText>
    <label>Why Henkel?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>