force-app/main/default/objects/CTA__c/fields/Your_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Your_Enquiry__c</fullName>
    <label>Your Enquiry</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>