force-app/main/default/objects/CTA__c/recordTypes/Abandoned_Cart.recordType-meta.xml
<RecordType>
    <fullName>Abandoned_Cart</fullName>
    <active>true</active>
    <label>Abandoned Cart</label>
</RecordType>