force-app/main/default/objects/CTA__c/recordTypes/Contact_Us.recordType-meta.xml
<RecordType>
    <fullName>Contact_Us</fullName>
    <active>true</active>
    <label>Contact Us</label>
</RecordType>