force-app/main/default/objects/CTA__c/recordTypes/Customized_Price.recordType-meta.xml
<RecordType>
    <fullName>Customized_Price</fullName>
    <active>true</active>
    <label>Customized Price</label>
</RecordType>