force-app/main/default/objects/CTA__c/recordTypes/eCommerce.recordType-meta.xml
<RecordType>
    <fullName>eCommerce</fullName>
    <active>true</active>
    <label>eCommerce</label>
</RecordType>