force-app/main/default/objects/CTA__c/recordTypes/Facebook_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Facebook_Enquiry</fullName>
    <active>true</active>
    <label>Facebook Enquiry</label>
</RecordType>