force-app/main/default/objects/CTA__c/recordTypes/Get_A_Demo.recordType-meta.xml
<RecordType>
    <fullName>Get_A_Demo</fullName>
    <active>true</active>
    <label>Get A Demo</label>
</RecordType>