force-app/main/default/objects/CTA__c/recordTypes/GM_Design_Guide.recordType-meta.xml
<RecordType>
    <fullName>GM_Design_Guide</fullName>
    <active>true</active>
    <label>GM Design Guide</label>
</RecordType>