force-app/main/default/objects/CTA__c/recordTypes/Indiamart.recordType-meta.xml
<RecordType>
    <fullName>Indiamart</fullName>
    <active>true</active>
    <label>Indiamart</label>
</RecordType>