force-app/main/default/objects/CTA__c/recordTypes/Live_webinars.recordType-meta.xml
<RecordType>
    <fullName>Live_webinars</fullName>
    <active>true</active>
    <label>Live webinars (Marketing team)</label>
</RecordType>