force-app/main/default/objects/CTA__c/recordTypes/Mail_enquiry.recordType-meta.xml
<RecordType>
    <fullName>Mail_enquiry</fullName>
    <active>true</active>
    <label>Mail enquiry</label>
</RecordType>