force-app/main/default/objects/CTA__c/recordTypes/Masterclass.recordType-meta.xml
<RecordType>
    <fullName>Masterclass</fullName>
    <active>true</active>
    <label>Masterclass</label>
</RecordType>