force-app/main/default/objects/CTA__c/recordTypes/Newsletter_subscription.recordType-meta.xml
<RecordType>
    <fullName>Newsletter_subscription</fullName>
    <active>true</active>
    <label>Newsletter subscription</label>
</RecordType>