force-app/main/default/objects/CTA__c/recordTypes/Quotation.recordType-meta.xml
<RecordType>
    <fullName>Quotation</fullName>
    <active>true</active>
    <label>Quotation</label>
</RecordType>