force-app/main/default/objects/CTA__c/recordTypes/Refer_A_Friend.recordType-meta.xml
<RecordType>
    <fullName>Refer_A_Friend</fullName>
    <active>true</active>
    <label>Refer A Friend</label>
</RecordType>