force-app/main/default/objects/CTA__c/recordTypes/Request_Callback.recordType-meta.xml
<RecordType>
    <fullName>Request_Callback</fullName>
    <active>true</active>
    <label>Request Callback</label>
</RecordType>