force-app/main/default/objects/CTA__c/recordTypes/Sampling.recordType-meta.xml
<RecordType>
    <fullName>Sampling</fullName>
    <active>true</active>
    <description>Request a free sample record type</description>
    <label>Sampling</label>
</RecordType>