force-app/main/default/objects/CTA__c/recordTypes/TradeIndia.recordType-meta.xml
<RecordType>
    <fullName>TradeIndia</fullName>
    <active>true</active>
    <label>TradeIndia</label>
</RecordType>