force-app/main/default/objects/CTA__c/recordTypes/Web_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Web_Enquiry</fullName>
    <active>true</active>
    <label>Web Enquiry</label>
</RecordType>