force-app/main/default/objects/CTA__c/recordTypes/Website_Registration.recordType-meta.xml
<RecordType>
    <fullName>Website_Registration</fullName>
    <active>true</active>
    <label>Website Registration</label>
</RecordType>