force-app/main/default/objects/CTA__c/validationRules/CTA_Follow_Up_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CTA_Follow_Up_Status_Validation</fullName>
    <active>true</active>
    <description>When CTA Status is follow up then follow up action and follow up date needs to be mentioned</description>
    <errorConditionFormula>(ISBLANK(Follow_up_due_date__c)=TRUE    ||   ISBLANK( TEXT(Follow_up_action__c)) = TRUE   ) &amp;&amp;  (TEXT(CTA_stage__c )== &apos;Need Follow up&apos;)</errorConditionFormula>
    <errorMessage>Please fill Follow up action and Follow up date to change cta status to Need Follow up.</errorMessage>
</ValidationRule>