force-app/main/default/objects/CTA__c/validationRules/CTA_Status_is_Nurturing_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CTA_Status_is_Nurturing_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( CTA_stage__c , &apos;Nurturing&apos;) &amp;&amp;    ISBLANK(TEXT( Reasons_for_nurturing__c )  ) = True</errorConditionFormula>
    <errorMessage>Please add Reason for Nurturing value</errorMessage>
</ValidationRule>