force-app/main/default/objects/CTA__c/validationRules/CTA_Status_is_unqualified_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CTA_Status_is_unqualified_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( CTA_stage__c , &apos;Unqualified&apos;) &amp;&amp;    ISBLANK(TEXT(  Reasons_for_Unqualified__c )  ) = True</errorConditionFormula>
    <errorMessage>Please add Reason for unqualified value</errorMessage>
</ValidationRule>