force-app/main/default/objects/CTA__c/validationRules/Data_validation_for_ecom.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_validation_for_ecom</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(Ecoomerce_Qualification__c, &apos;Speak to IST&apos;)  ,  NOT( ISPICKVAL(  Lead__r.CC_Status__c  , &apos;Data Validated&apos;) ))</errorConditionFormula>
    <errorMessage>Please Validate the data &amp; Make sure CC status Data Validated</errorMessage>
</ValidationRule>